--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -31,3 +31,6 @@ jobs:
       run: |
         touch .env
         echo "${{ secrets.ENV_FILE }}" > .env
+
+    - name: Restart Backend Server
+      run: pm2 restart backend
