--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -33,4 +33,4 @@ jobs:
         echo "${{ secrets.ENV_FILE }}" > .env
 
     - name: Restart Backend Server
-      run: pm2 restart backend
+      run: pm2 restart backend --update-env
