--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -30,4 +30,4 @@ jobs:
         echo "${{ secrets.ENV_FILE }}" > .env
 
     - name: Restart Backend Server
-      run: ./script.sh
+      run: pm2 restart backend --update-env
